Added featured website page, increased website functionality. Working on making site mobile friendly.

--- a/introduction.html
+++ b/introduction.html
@@ -28,27 +28,29 @@
     <nav class="topnav"> <!-- changed div to nav -->
       <a href="index.html">Home</a>
       <a class="active" href="introduction.html">About Me</a>
+      <a href="websites.html">My Websites</a>
       <a href="projects.html">My Projects</a>
       <a href="resume.html">My Resume</a>
     </nav>
 </div>
 
-    <div class="row">
-  <div class="col-md col-my-auto" style="text-align:center;"> <!-- changed column to col-sm -->
+  <div class="row">
+    <div class="col-md-6 align-self-center" align="center">
   <h1 class="project-name"> Aidan Scheer</h1>
 
-  <p class="description"> Even though it says above, my name is Aidan Scheer! I am currently studying Interactive Media Studies with a minor in Computer Science at Miami University. I am a rising senior with passions in design, web development, and eSports. This portfolio is my final project for IMS 222 and an overall assessment of the skills I've learned this past semester.</p>
+  <p class="description"> Even though it says above, my name is Aidan Scheer! I am currently studying Interactive Media Studies with a minor in Computer Science at Miami University. 
+   I am a rising senior with passions in design, website development, and eSports. This portfolio contains both my published websites a well as projects using Adobe Suite. As I continue working
+   on and completing new projects, they will be added to this portfolio.</p>
 
-   <button class="button"  style="vertical-align:middle"> <span><a href="https://portfolio--scheera2.repl.co/projects.html" style="color:white;text-decoration:none;"> Continue to my Projects </a></span></button>
+   <button class="button"  style="vertical-align:middle"> <span><a href="websites.html" style="color:white;text-decoration:none;"> Continue to my Projects </a></span></button>
 
   </div>
  
-  <div class="col-sm" align="center">
+  <div class="col-md-6" align="center">
    <img class="profile" src="/images/ProfessionalPicture.jpg" alt="Aidan Scheer Professional Headshot">
   </div>
-  </div>
 </div>
-  </div>
+
   
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
