--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,7 @@
     <nav class="topnav"> <!-- changed div to nav -->
       <a href="index.html">Home</a>
       <a href="introduction.html">About Me</a>
+      <a href="websites.html">My Websites</a>
       <a class="active" href="projects.html">My Projects</a>
       <a href="resume.html">My Resume</a>
     </nav>
@@ -36,17 +37,17 @@
 <div class="row">
   <div class="col-sm"> <!-- changed column to col-sm -->
   <a href="/projects/project-one.html">
-    <img class="project-window" src="/images/MoviePoster.png" alt="A Movie Poster" style="width:100.2%">
+    <img class="img-fluid" src="/images/MoviePoster.png" alt="A Movie Poster" style="width:100.2%">
   </div>
   </a>
   <div class="col-sm">
     <a href="/projects/project-two.html">
-    <img class="project-window" src="/images/MagazineCover2.png" alt="Sports Xtreme Wakeboarding Edition" style="width:99.5%">
+    <img class="img-fluid" src="/images/MagazineCover2.png" alt="Sports Xtreme Wakeboarding Edition" style="width:99.5%">
     </a>
   </div>
   <div class="col-sm">
     <a href="/projects/project-three.html">
-    <img class="project-window" src="/images/AdobeBook.png" alt="Redesign of an Adobe Book Cover" style="width:100.1%">
+    <img class="img-fluid" src="/images/AdobeBook.png" alt="Redesign of an Adobe Book Cover" style="width:100.1%">
     </a>
   </div>
   </div> <!-- added a missing /div -->
