--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
 
-  <body>
-
 <body>
   <div class="container-fluid">
 
     <div class="row">
-  <div class="col-6 my-auto" align="center"> <!-- changed column to col-sm -->
+  <div class="col-6 my-auto" align="center">
  <h1 class="front-name"> Aidan Scheer</h1>
 
   <p class="front-intro">Welcome to my portfolio! Take a look around and check out my past work and resume. </p>
@@ -37,6 +35,7 @@
  
   <div class="col-sm" align="center">
    <img class="project-display" src="/images/MagazineCover2.png" alt="Adobe Book Cover">
+  </div>
   </div>
   </div>
 
