--- a/resume.html
+++ b/resume.html
@@ -24,6 +24,7 @@
     <nav class="topnav"> <!-- changed div to nav -->
       <a href="index.html">Home</a>
       <a href="introduction.html">About Me</a>
+      <a href="websites.html">My Websites</a>
       <a href="projects.html">My Projects</a>
       <a class="active" href="resume.html">My Resume</a>
     </nav>
@@ -31,14 +32,8 @@
 
 <div class="col-sm" align="center">
 
-<a href="https://www.linkedin.com/in/aidan-scheer/" target="_blank" style="background-color: #525252">
+<a href="https://www.linkedin.com/in/aidan-scheer/" target="_blank">
 <img class="resume" src="/images/Resume.png" alt="Aidan Scheer Resume">
-</a>
-
-<p><button class="button" style="bottom=10px"> <span> <a href="https://portfolio--scheera2.repl.co/text-resume.html" style="color:white;text-decoration:none;"> Click here for an HTML version </a></span></button></p>
-
-<a href="https://media.tenor.com/images/a33debefbb07b7ce6ad2744e88ffd77a/tenor.gif" target="_blank">
-<h5>KekW</h5>
 </a>
 
 </div>
