Cleaned up href hyperlinks

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <p class="front-intro">Welcome to my portfolio! Take a look around and check out my past work and resume. </p>
 
-  <button class="button"  style="vertical-align:middle"> <span><a href="introduction.html" style="color:white;text-decoration:none;"> View My Portfolio </a></span></button>
+  <button class="button"  style="vertical-align:middle"> <span><a href="https://www.aidanscheer.com/introduction" style="color:white;text-decoration:none;"> View My Portfolio </a></span></button>
 
   </div>
  
