--- a/introduction.html
+++ b/introduction.html
@@ -26,11 +26,11 @@
 
 <div class="row"> <!-- put nav in a row -->
     <nav class="topnav"> <!-- changed div to nav -->
-      <a href="index.html">Home</a>
-      <a class="active" href="introduction.html">About Me</a>
-      <a href="websites.html">My Websites</a>
-      <a href="projects.html">My Projects</a>
-      <a href="resume.html">My Resume</a>
+      <a href="https://www.aidanscheer.com/index">Home</a>
+      <a class="active" href="https://www.aidanscheer.com/introduction">About Me</a>
+      <a href="https://www.aidanscheer.com/websites">My Websites</a>
+      <a href="https://www.aidanscheer.com/projects">My Projects</a>
+      <a href="https://www.aidanscheer.com/resume">My Resume</a>
     </nav>
 </div>
 
@@ -42,7 +42,7 @@
    I am a rising senior with passions in design, website development, and eSports. This portfolio contains both my published websites a well as projects using Adobe Suite. As I continue working
    on and completing new projects, they will be added to this portfolio.</p>
 
-   <button class="button"  style="vertical-align:middle"> <span><a href="websites.html" style="color:white;text-decoration:none;"> Continue to my Projects </a></span></button>
+   <button class="button"  style="vertical-align:middle"> <span><a href="https://www.aidanscheer.com/websites" style="color:white;text-decoration:none;"> Continue to my Projects </a></span></button>
 
   </div>
  
