--- a/projects/project-three.html
+++ b/projects/project-three.html
@@ -29,7 +29,7 @@
 
   <p class="description"> In this project, I was tasked to redesign an Adobe Photoshop Textbook. Using the logo of the publishing company, I tried to keep the layout similar to past editions while including a rich nighttime cityscape that pops out to readers. </p>
 
-  <button class="button"  style="vertical-align:middle"> <span><a href="https://portfolio--scheera2.repl.co/projects.html" style="color:white;text-decoration:none;"> Back to Projects </a></span></button>
+  <button class="button"  style="vertical-align:middle"> <span><a href="https://www.aidanscheer.com/projects" style="color:white;text-decoration:none;"> Back to Projects </a></span></button>
 
   </div>
  
