--- a/projects/project-two.html
+++ b/projects/project-two.html
@@ -29,7 +29,7 @@
 
   <p class="description"> For this project, I was tasked to create a magazine cover for the fictional series "Sports Xtreme". The specific edtion I created was one for windsurfing, a sport I did not have much experience of beforehand. I used techniques that allowed for the different graphics and texts to pop out without causing too much clutter to the magazine cover. </p>
 
-  <button class="button"  style="vertical-align:middle"> <span><a href="https://portfolio--scheera2.repl.co/projects.html" style="color:white;text-decoration:none;"> Back to Projects </a></span></button>
+  <button class="button"  style="vertical-align:middle"> <span><a href="https://www.aidanscheer.com/projects" style="color:white;text-decoration:none;"> Back to Projects </a></span></button>
 
   </div>
  
