--- a/resume.html
+++ b/resume.html
@@ -22,11 +22,11 @@
 
 <div class="row"> <!-- put nav in a row -->
     <nav class="topnav"> <!-- changed div to nav -->
-      <a href="index.html">Home</a>
-      <a href="introduction.html">About Me</a>
-      <a href="websites.html">My Websites</a>
-      <a href="projects.html">My Projects</a>
-      <a class="active" href="resume.html">My Resume</a>
+      <a href="https://www.aidanscheer.com/index">Home</a>
+      <a href="https://www.aidanscheer.com/introduction">About Me</a>
+      <a href="https://www.aidanscheer.com/websites">My Websites</a>
+      <a href="https://www.aidanscheer.com/projects">My Projects</a>
+      <a class="active" href="https://www.aidanscheer.com/resume">My Resume</a>
     </nav>
 </div>
 
